# pw-manager

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  DockerFile  database.db
backend/src/: handlers.rs  main.rs  models.rs
src/: app.css  phc-argon2.d.ts
src/lib/: Card.svelte  Login.svelte  SelectModal.svelte  SettingsModal.svelte  account.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
