[package]
name = "pw-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "0.5", features = ["cors"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"
